Update RentalValidator.java